--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.gary.bestshop</groupId>
+            <artifactId>bestshop-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
